--- a/VariantOne/Properties/launchSettings.json
+++ b/VariantOne/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "http": {
+    "VariantOneHttp": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
