--- a/VariantOne/appsettings.Development.json
+++ b/VariantOne/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConnectionToPostgres": "Host=localhost; Port=5004; Database=ct_1; Username=postgres; Password=admin"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
