--- a/VariantTwo/appsettings.json
+++ b/VariantTwo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConnectionToPostgres": "Host=; Port=; Database=; Username=; Password="
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
